--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
             bundle -v
 
       # An orb function for bundling
-      - ruby/bundle-install
+      - run:
+          name: "Bundle Install"
+          command: bundle install
 
       - run:
           name: Setup Code Climate test-reporter
@@ -39,4 +41,5 @@ jobs:
             export PSU_ID_OAUTH_CLIENT_SECRET=bar
             RAILS_ENV=test bundle exec rspec &&
             bin/cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.json coverage/.resultset.json &&
-            bin/cc-test-reporter upload-coverage
+                  bin/cc-test-reporter upload-coverage
+            
